# rUNSWift-2018-release

./: CMakeLists.txt  CONTRIBUTING.md  README.md  cscope.out  tags
docs/20110901-FieldLineDetectionAcra/: references.bib
docs/20120219-RANSACFieldLineDetection-RoboCupSymposium/: references.bib
docs/20180220-SummerTasteOfResearchVision/: README.md
logs/: log.txt
ml_models/: README.md  ball_classifier.gmm  ball_classifier.pca  ml_training.py  model.pkl  penalty_spot_classifier.gmm  penalty_spot_classifier.pca  train.sh
robot/: CMakeLists.txt  main.cpp  robot.cmake  runswift.cmake  testrunswift.cmake
robot/blackboard/: Blackboard.cpp  Blackboard.hpp  Blackboard.tcc
robot/gamecontroller/: GameController.cpp  GameController.hpp  RoboCupGameControlData.cpp  RoboCupGameControlData.hpp
robot/libagent/: AgentData.hpp  libagent.cpp  libagent.hpp
robot/motion/: MotionAdapter.cpp  MotionAdapter.hpp  MotionOdometry.cpp
robot/perception/: PerceptionThread.cpp  PerceptionThread.hpp
robot/receiver/: Nao.tcc  RemoteControl.cpp  RemoteControl.hpp  Team.cpp
robot/simulation/: Joints.cpp  Joints.hpp  Observation.hpp  PerceptorInfo.cpp  PerceptorInfo.hpp  Sensors.cpp  Sensors.hpp  SimVisionAdapter.cpp  SimVisionAdapter.hpp  SimulationConnection.cpp  SimulationConnection.hpp  SimulationThread.cpp  SimulationThread.hpp  SonarSensor.cpp  SonarSensor.hpp
robot/transmitter/: OffNao.cpp  OffNao.hpp  Team.cpp  Team.hpp  TransmitterDefs.hpp
robot/types/: AbsCoord.hpp  ActionCommand.hpp  BBox.hpp  BallInfo.hpp  BehaviourRequest.hpp  (+20 more)
utils/: CMakeLists.txt  remote_gdb
(+343 files in other folders)
